--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ code {
   top: 180px;
   transform: translate(-50%);
   padding: 2%;
-  padding-bottom: 5%;
+  padding-bottom: 4%;
   background-color: white;
   width: fit-content;
   height: fit-content;
@@ -73,6 +73,13 @@ code {
   transform: translateY(4px);
 }
 
+#authentication .link{
+  display: block;
+  margin-top: 15px;
+  font-size: 15px;
+  text-decoration: underline;
+  cursor: pointer;
+}
 
 #authentication #errMsg{
   color: crimson;
