--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ code {
   width: fit-content;
   height: fit-content;
   font-size: inherit;
+  border: lightgray 3px solid;
 }
 
 #authentication label,
@@ -105,9 +106,10 @@ code {
 
 #navBar{
   position: relative;
+  background-color: white;
   z-index: 10;
   height: 70px;
-  border-bottom: solid dimgray 3px;
+  border-bottom: solid lightgray 3px;
   padding-right: 15px;
 }
 
@@ -204,7 +206,7 @@ code {
 h1{
   position: relative;
   top: 180px;
-  left: 50%;
+  left: 49%;
   width: fit-content;
   transform: translate(-50%);
 }
@@ -219,7 +221,7 @@ h1{
 #searchBar .material-icons{
   position: relative;
   font-size: 30px;
-  transform: translate(-280px,10px);
+  transform: translate(-270px,10px);
   cursor: pointer;
 }
 
@@ -286,6 +288,7 @@ h1{
 
 .snippet{
   pointer-events: initial;
+  background-color: white;
   position: relative;
   width: 600px;
   left: 50%;
@@ -311,23 +314,12 @@ h1{
   position: relative;
   left: 50%;
   transform: translate(-50%);
-  top: 50px;
   height: fit-content;
-  padding-bottom:80px;
-}
-
-
-#like, #apply{
-  margin-top: 1em;
-  position: relative;
-  cursor: pointer;
-  padding: 8px;
-  border-radius: 5px;
-}
-
-#detail #apply{
-  background-color: black;
-  
+  padding: 80px 40px;
+  min-height: 90vh;
+  height: fit-content;
+  background-color: white;
+  border: lightgray 3px solid;
 }
 
 #detail #like{
@@ -340,21 +332,45 @@ h1{
   text-decoration: none;
 }
 
-#detail .default,
-#detail .unliked{
-  color: black;
-  background-color: white;
-}
+
 
 #detail button{
   font-size: 16px;
   margin-right: 10px;
   cursor: pointer;
+  font-size: 15px;
+  padding: 5px 10px;
+  
 }
 
-#detail .liked{
-  color: white;
-  background-color: dimgray;
+
+
+#detail #like, 
+#detail #apply{
+  background-color: white;
+  border-radius: 25px;
+  outline: none;
+  border: none;
+  margin-top: 1em;
+  position: relative;
+  cursor: pointer;
+  padding: 10px 17px;
+}
+
+#detail #apply{
+  background-color: teal;
+  border: teal 2px solid;
+}
+
+#detail #like.liked{
+  color: teal;
+  background-color: PaleTurquoise;
+  border: teal 2px solid;
+}
+
+#detail #like.unliked{
+  color: black;
+  border: teal 2px solid;
 }
 
 #detail #like:hover{
@@ -375,7 +391,7 @@ h1{
 #detail p{
   white-space: pre-line;
   word-wrap: break-word;
-  font-size: 25px;
+  font-size: 20px;
   text-align: justify;
 }
 
