--- a/src/index.css
+++ b/src/index.css
@@ -113,15 +113,6 @@ code {
   padding-right: 15px;
 }
 
-/**
-#navBar span{
-  position: relative;
-  font-size: 30px;
-  display: inline-block;
-  top: 16px;
-  font-family: "Lucida Console", "Courier New", monospace;
-}
-*/
 
 #navBar button{
   float: right;
@@ -398,7 +389,7 @@ h1{
 #job_form{
   position: relative;
   top: 25px;
-  width: 40%;
+  width: 30%;
   left: 50%;
   transform: translate(-50%);
   padding-bottom: 80px;
@@ -406,11 +397,12 @@ h1{
 
 #job_form input,
 #job_form label,
+#job_form select,
 textarea{
   width: 100%;
   display: block;
   font-size: 20px;
-  background-color: lightgray;
+  
 }
 
 #job_form label{
@@ -418,9 +410,15 @@ textarea{
   margin-bottom: 5px;
 }
 
+#job_form select{
+  padding: 1px 2px;
+}
+
+#job_form select,
 #job_form input{
-  margin-bottom: 10px;
-  border: solid black 2px;
+  margin-bottom: 20px;
+  border: solid darkgray 2px;
+  padding: 8px 10px;
 }
 
 textarea{
